responsive done nav not working

--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>G3 Architects</title>
 </head>
 <body>
     <header class="header">
         <div class="nav-bar">
             <h3 class="heading">G3 Architects</h3>
             <nav class="nav">
-                <ul class="nav-menu">
+                <img src="images/icons/menu.png" width="30px" alt="" class="nav-bar-ico">
+                <ul class="nav-menu mobile-nav-menu">
                     <li class="nav-items"><a href="#">Home</a></li>
                     <li class="nav-items"><a href="#">About</a></li>
                     <li class="nav-items"><a href="#">Contact Us</a></li>
                     <li class="nav-items"><a href="#">Login</a></li>
-                    <li class="nav-bar-ico"><a href="#"><img src="images/icons/menu.png" width="30px" alt=""></a></li>
+                    
                 </ul>
+                
             </nav>
         </div>
         <div class="banner">
